# apriltag-python

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  PROJECT_CHECKLIST.md  PYPI_RELEASE.md  QUICKSTART.md  README.md  README_CN.md  README_TYPE_HINTS.md  STUB_GENERATION.md  TYPE_HINTS.md  apriltag.pyi  generate_stubs.py  pyproject.toml  setup.py  test_install.py  test_stub_generation.py
.github/workflows/: build-and-test.yml  deploy_source.yml  publish-to-pypi.yml
examples/: detect_tags.py  type_checking_example.py  visualize_detections.py  webcam_demo.py
src/: AdaptiveCMakeLists.txt  adaptive_apriltag_pywrap.c
